Binary platform adaptions
https://bugs.eclipse.org/bugs/show_bug.cgi?id=402116

better support for binary NLS project to find the correct (nearest)
project. correct calculation of inheritance.